2016-10-11 Jan Kotanski <jankotan@gmail.com>
	* fix for findDevice
	* add elementtype options into nxscreate tangods
	* update dcm standard components
	* tagged as v2.8.0

2016-10-06 Jan Kotanski <jankotan@gmail.com>
	* refresh dcm standard component
	* tagged as v2.7.1

2016-10-06 Jan Kotanski <jankotan@gmail.com>
	* add support for nxscreate tangods without indexes
	* tagged as v2.7.0

2016-10-06 Jan Kotanski <jankotan@gmail.com>
	* simplify the template component of eiger dectris
	* tagged as v2.6.2

2016-09-30 Jan Kotanski <jankotan@gmail.com>
	* fix dcm template components
	* add test version of eigerdectris detector to template components
	* tagged as v2.6.1

2016-09-19 Jan Kotanski <jankotan@gmail.com>
	* add replacing device, hostname in nxscreator onlinecp
	* add info into the test mode for onlineds
	* tagged as v2.6.0

2016-09-07 Jan Kotanski <jankotan@gmail.com>
	* change the following options of nxscreate:
	  --device-prefix:	-p -> -v
	  --datasource-prefix: 	-o -> -s
	  --host:		-s -> -u
	  --strategy:	        -s -> -g
	* add --overwrite (-o) to tangods, clientds, deviceds, comp
	* tagged as v2.5.0

2016-09-07 Jan Kotanski <jankotan@gmail.com>
	* add mcaxia component
	* tagged as v2.4.0

2016-08-10 Jan Kotanski <jankotan@gmail.com>
	* add dcm component
	* make args and options in creator public
	* tagged as v2.3.0

2016-07-20 Jan Kotanski <jankotan@gmail.com>
	* fix for missing xml templates
	* tagged as v2.2.1

2016-07-19 Jan Kotanski <jankotan@gmail.com>
	* nxscreate: add stdcomp action
	* tagged as v2.2.0

2016-06-06 Jan Kotanski <jankotan@gmail.com>
	* nxsetup: fix serching for local user
	* nxsetup: add setting up NXSConfigServer only with 'read_default_file'
	* tagged as v2.1.3

2016-05-30 Jan Kotanski <jankotan@gmail.com>
	* nxscollect: add collection of files with other then nxs extension
	* tagged as v2.1.2

2016-05-26 Jan Kotanski <jankotan@gmail.com>
	* nxsparser: fix for dim $datasources
	* tagged as v2.1.1
