@@ -71,6 +71,9 @@ def main():
     parser.add_option("-x", "--file-prefix", type="string",
                       help="file prefix, i.e. counter",
                       dest="file", default="")
+    parser.add_option("-e", "--external", type="string",
+                      help="external configuration server",
+                      dest="external", default="")
     parser.add_option("-p", "--xml-package", dest="xmlpackage",
                       help="xml template package")
 
